--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "license": "ISC",
   "scripts": {
     "build": "rimraf build && tsc",
-    "dev:start": "npm run build && npm run start",
-    "start": "node build/index.js"
+    "dev:analysis": "npm run build && npm run analysis",
+    "analysis": "node build/analysis.js"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.8.10",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "web-ext": "^7.8.0"
   }
 }
