Use WebSocket for controller-agent communication. Add debugMode to Config. Massive rewriting

--- a/firefox-agent/manifest.json
+++ b/firefox-agent/manifest.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
-  "name": "Foxhound Analysis",
+  "name": "Firefox Agent",
   "version": "1.0",
 
-  "permissions": ["webRequest", "webNavigation", "*://*/*"],
+  "permissions": ["webRequest", "webNavigation", "tabs", "*://*/*"],
 
   "background": {
     "scripts": ["background.js"]
