--- a/config.example.json
+++ b/config.example.json
@@ -1,4 +1,5 @@
 {
+  "debugMode": false,
   "outputBasePath": "/path/to/results",
   "executablePath": "/path/to/foxhound",
   "profilePath": "/path/to/foxhound-profile",
