--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
-    "@types/express": "^4.17.21",
     "@types/node": "^20.8.10",
+    "@types/websocket": "^1.0.9",
     "rimraf": "^5.0.5",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "web-ext": "^7.8.0"
+    "http": "^0.0.1-security",
+    "web-ext": "^7.8.0",
+    "websocket": "^1.0.34"
   }
 }
