--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "http": "^0.0.1-security",
+    "puppeteer-core": "^21.5.2",
     "web-ext": "^7.8.0",
     "websocket": "^1.0.34"
   }
