--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "http": "^0.0.1-security",
     "psl": "^1.9.0",
     "puppeteer-core": "^21.5.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "web-ext": "^7.8.0",
     "websocket": "^1.0.34"
   }
