--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.3",
     "@types/node": "^20.8.10",
+    "@types/node-fetch": "^2.6.9",
     "@types/psl": "^1.1.3",
     "@types/websocket": "^1.0.9",
     "rimraf": "^5.0.5",
@@ -21,10 +22,9 @@
   "dependencies": {
     "@algorithm.ts/lcs": "^3.1.1",
     "http": "^0.0.1-security",
+    "node-fetch": "^2.7.0",
     "psl": "^1.9.0",
     "puppeteer-core": "^21.5.2",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "web-ext": "^7.8.0",
     "websocket": "^1.0.34"
   }
