--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@algorithm.ts/lcs": "^3.1.1",
     "http": "^0.0.1-security",
     "node-fetch": "^2.7.0",
+    "port_agent": "^1.3.0",
     "psl": "^1.9.0",
     "puppeteer-core": "^21.5.2",
     "web-ext": "^7.8.0",
